Working (tested on Linux) D3XX write/read